monticore-generator/src/test/resources/cocos/invalid/A4020/A4020.mc4
/* (c) https://github.com/MontiCore/monticore */

package cocos.invalid.A4020;

grammar A4020 {

 A;

 astrule A;

 astrule A;


}
